--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>redis</module>
         <module>spring</module>
         <module>spring/transaction</module>
+        <module>redis</module>
     </modules>
 
     <properties>
