添加callback相关demo&笔记

--- a/skill/pom.xml
+++ b/skill/pom.xml
@@ -3,17 +3,16 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>com.lbj</groupId>
+        <artifactId>Demo</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
 
-    <groupId>com.lbj</groupId>
-    <artifactId>Demo</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>skill</artifactId>
     <packaging>pom</packaging>
     <modules>
-        <module>juc</module>
-        <module>redis</module>
-        <module>spring</module>
-        <module>spring/transaction</module>
-        <module>skill</module>
+        <module>callback</module>
     </modules>
 
     <properties>
