--- a/skill/callback/pom.xml
+++ b/skill/callback/pom.xml
@@ -3,18 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>com.lbj</groupId>
+        <artifactId>skill</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
 
-    <groupId>com.lbj</groupId>
-    <artifactId>Demo</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
-    <modules>
-        <module>juc</module>
-        <module>redis</module>
-        <module>spring</module>
-        <module>spring/transaction</module>
-        <module>skill</module>
-    </modules>
+    <artifactId>callback</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
