--- a/spring/transaction/src/main/resources/application.properties
+++ b/spring/transaction/src/main/resources/application.properties
@@ -2,8 +2,19 @@ spring.application.name=transaction
 server.port=8080
 
 spring.datasource.username=root
-spring.datasource.password=xxxx
-spring.datasource.url=jdbc:mysql://xxx:3306/spring_transaction?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=UTC
+spring.datasource.password=xxx
+spring.datasource.url=jdbc:mysql://xxx/spring_transaction?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=UTC
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+mybatis-plus.mapper-locations=classpath:com/lbj/trans/mapper/*.xml
+mybatis-plus.type-aliases-package=com.lbj.trans.pojo
+
+logging.level.com.baomidou.mybatisplus=debug
+# ???ip??
+spring.redis.host=xxx
+# ???
+spring.redis.port=6379
+spring.redis.maxTotal=30
+spring.redis.maxIdle=10
+spring.redis.password=xxx
